Renamed project folders so they no longer contain any spaces.

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,41 @@ Card Game/CMakeFiles/cmake.check_cache
 Card Game/CMakeFiles/feature_tests.bin
 Card Game/CMakeFiles/TargetDirectories.txt
 Card Game/CMakeFiles/war.dir/depend.internal
+String/CMakeFiles/3.5.2/CompilerIdCXX/a.out
+String/CMakeCache.txt
+String/CMakeFiles/3.5.2/CMakeDetermineCompilerABI_C.bin
+String/CMakeFiles/3.5.2/CMakeDetermineCompilerABI_CXX.bin
+String/CMakeFiles/3.5.2/CompilerIdC/a.out
+String/CMakeFiles/3.5.2/CompilerIdC/CMakeCCompilerId.c
+String/CMakeFiles/3.5.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
+String/CMakeFiles/cmake.check_cache
+String/CMakeFiles/CMakeOutput.log
+*.bin
+String/CMakeFiles/feature_tests.c
+String/CMakeFiles/feature_tests.cxx
+String/CMakeFiles/Makefile2
+String/CMakeFiles/progress.marks
+String/CMakeFiles/Progress/1
+String/CMakeFiles/Progress/count.txt
+String/Makefile
+String/CMakeFiles/TargetDirectories.txt
+String/CMakeFiles/string.dir/link.txt
+String/CMakeFiles/string.dir/depend.internal
+String/CMakeFiles/string.dir/CXX.includecache
+War/Makefile
+War/war
+War/CMakeFiles/war.dir/link.txt
+War/CMakeFiles/war.dir/depend.internal
+War/CMakeCache.txt
+War/CMakeFiles/3.5.2/CompilerIdC/a.out
+War/CMakeFiles/3.5.2/CompilerIdC/CMakeCCompilerId.c
+War/CMakeFiles/3.5.2/CompilerIdCXX/a.out
+War/CMakeFiles/3.5.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
+War/CMakeFiles/cmake.check_cache
+War/CMakeFiles/CMakeOutput.log
+War/CMakeFiles/feature_tests.c
+War/CMakeFiles/feature_tests.cxx
+War/CMakeFiles/Makefile2
+War/CMakeFiles/progress.marks
+War/CMakeFiles/TargetDirectories.txt
+War/CMakeFiles/war.dir/CXX.includecache
