Added more of an implementation of the overloaded == operator.

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,5 @@ War/CMakeFiles/Makefile2
 War/CMakeFiles/progress.marks
 War/CMakeFiles/TargetDirectories.txt
 War/CMakeFiles/war.dir/CXX.includecache
+String/CMakeFiles/Progress/3
+String/CMakeFiles/Progress/2
