--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,4 @@ War/CMakeFiles/TargetDirectories.txt
 War/CMakeFiles/war.dir/CXX.includecache
 String/CMakeFiles/Progress/3
 String/CMakeFiles/Progress/2
+String/string
