--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,22 @@ War/CMakeFiles/war.dir/CXX.includecache
 String/CMakeFiles/Progress/3
 String/CMakeFiles/Progress/2
 String/string
+Bitcard/Bitcard
+Bitcard/CMakeCache.txt
+Bitcard/CMakeFiles/3.5.2/CompilerIdC/a.out
+Bitcard/CMakeFiles/3.5.2/CompilerIdC/CMakeCCompilerId.c
+Bitcard/CMakeFiles/3.5.2/CompilerIdCXX/a.out
+String/string.hpp
+Bitcard/Makefile
+String/string.hpp
+Bitcard/CMakeFiles/TargetDirectories.txt
+Bitcard/CMakeFiles/progress.marks
+Bitcard/CMakeFiles/Makefile2
+Bitcard/CMakeFiles/feature_tests.cxx
+Bitcard/CMakeFiles/feature_tests.c
+Bitcard/CMakeFiles/CMakeOutput.log
+Bitcard/CMakeFiles/cmake.check_cache
+Bitcard/CMakeFiles/Bitcard.dir/link.txt
+Bitcard/CMakeFiles/Bitcard.dir/depend.internal
+Bitcard/CMakeFiles/Bitcard.dir/CXX.includecache
+Bitcard/CMakeFiles/3.5.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
