Added folder for project and put in Santa Paravia. Made sure the program compiled.

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,19 @@ Bitcard/CMakeFiles/Bitcard.dir/link.txt
 Bitcard/CMakeFiles/Bitcard.dir/depend.internal
 Bitcard/CMakeFiles/Bitcard.dir/CXX.includecache
 Bitcard/CMakeFiles/3.5.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
+Project/Old Santa Paravia/CMakeCache.txt
+Project/Old Santa Paravia/CMakeFiles/3.5.2/CompilerIdC/a.out
+Project/Old Santa Paravia/santa-paravia
+Project/Old Santa Paravia/CMakeFiles/TargetDirectories.txt
+Project/Old Santa Paravia/CMakeFiles/santa-paravia.dir/link.txt
+Project/Old Santa Paravia/CMakeFiles/santa-paravia.dir/depend.internal
+Project/Old Santa Paravia/CMakeFiles/santa-paravia.dir/C.includecache
+Project/Old Santa Paravia/CMakeFiles/progress.marks
+Project/Old Santa Paravia/CMakeFiles/Makefile2
+Project/Old Santa Paravia/CMakeFiles/feature_tests.cxx
+Project/Old Santa Paravia/CMakeFiles/feature_tests.c
+Project/Old Santa Paravia/CMakeFiles/CMakeOutput.log
+Project/Old Santa Paravia/CMakeFiles/cmake.check_cache
+Project/Old Santa Paravia/CMakeFiles/3.5.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
+Project/Old Santa Paravia/CMakeFiles/3.5.2/CompilerIdCXX/a.out
+Project/Old Santa Paravia/CMakeFiles/3.5.2/CompilerIdC/CMakeCCompilerId.c
