Created rational number class

--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,20 @@ Project/Old Santa Paravia/CMakeFiles/cmake.check_cache
 Project/Old Santa Paravia/CMakeFiles/3.5.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
 Project/Old Santa Paravia/CMakeFiles/3.5.2/CompilerIdCXX/a.out
 Project/Old Santa Paravia/CMakeFiles/3.5.2/CompilerIdC/CMakeCCompilerId.c
+Rational/CMakeCache.txt
+Rational/CMakeFiles/3.5.2/CompilerIdC/a.out
+Rational/CMakeFiles/3.5.2/CompilerIdC/CMakeCCompilerId.c
+Rational/CMakeFiles/3.5.2/CompilerIdCXX/a.out
+Rational/CMakeFiles/3.5.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
+*.check_cache
+Rational/CMakeFiles/CMakeOutput.log
+Rational/CMakeFiles/feature_tests.c
+Rational/CMakeFiles/feature_tests.cxx
+Rational/CMakeFiles/Makefile2
+Rational/CMakeFiles/progress.marks
+Rational/Rational
+Rational/Makefile
+Rational/CMakeFiles/TargetDirectories.txt
+Rational/CMakeFiles/Rational.dir/link.txt
+Rational/CMakeFiles/Rational.dir/depend.internal
+Rational/CMakeFiles/Rational.dir/CXX.includecache
