Created a folder for the new implementation of Santa Paravia.  Added a file for main, as well as a file for a player class.

--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,18 @@ Rational/CMakeFiles/TargetDirectories.txt
 Rational/CMakeFiles/Rational.dir/link.txt
 Rational/CMakeFiles/Rational.dir/depend.internal
 Rational/CMakeFiles/Rational.dir/CXX.includecache
+Project/New Santa Paravia/CMakeCache.txt
+Project/New Santa Paravia/CMakeFiles/3.5.2/CompilerIdC/a.out
+Project/New Santa Paravia/CMakeFiles/3.5.2/CompilerIdC/CMakeCCompilerId.c
+Project/New Santa Paravia/CMakeFiles/3.5.2/CompilerIdCXX/a.out
+Project/New Santa Paravia/CMakeFiles/3.5.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
+Project/New Santa Paravia/CMakeFiles/CMakeOutput.log
+Project/New Santa Paravia/CMakeFiles/feature_tests.c
+Project/New Santa Paravia/CMakeFiles/feature_tests.cxx
+Project/New Santa Paravia/CMakeFiles/Makefile2
+Project/New Santa Paravia/CMakeFiles/progress.marks
+Project/New Santa Paravia/CMakeFiles/santa-paravia.dir/CXX.includecache
+Project/New Santa Paravia/CMakeFiles/santa-paravia.dir/depend.internal
+Project/New Santa Paravia/santa-paravia
+Project/New Santa Paravia/CMakeFiles/TargetDirectories.txt
+Project/New Santa Paravia/CMakeFiles/santa-paravia.dir/link.txt
