Added the three card implementations.

--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,18 @@ Project/New Santa Paravia/CMakeFiles/santa-paravia.dir/depend.internal
 Project/New Santa Paravia/santa-paravia
 Project/New Santa Paravia/CMakeFiles/TargetDirectories.txt
 Project/New Santa Paravia/CMakeFiles/santa-paravia.dir/link.txt
+CardThreeWays/BitfieldCard/BitfieldCard
+CardThreeWays/BitfieldCard/CMakeCache.txt
+*.out
+*.c
+CardThreeWays/BitfieldCard/CMakeFiles/3.5.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
+*.includecache
+*.internal
+CardThreeWays/BitfieldCard/CMakeFiles/Bitcard.dir/link.txt
+CardThreeWays/BitfieldCard/CMakeFiles/BitfieldCard.dir/link.txt
+CardThreeWays/BitfieldCard/CMakeFiles/CMakeOutput.log
+CardThreeWays/BitfieldCard/CMakeFiles/feature_tests.cxx
+CardThreeWays/BitfieldCard/CMakeFiles/Makefile2
+CardThreeWays/BitfieldCard/CMakeFiles/progress.marks
+CardThreeWays/BitfieldCard/CMakeFiles/TargetDirectories.txt
+CardThreeWays/BitfieldCard/Makefile
