Fleshed out more implementation

--- a/JSON/CMakeLists.txt
+++ b/JSON/CMakeLists.txt
@@ -1,2 +1,10 @@
-project (JSON)
+project(JSON CXX)
+
+cmake_minimum_required(VERSION 3.5)
+
+
+
+set(CMAKE_CXX_FLAGS "-std=c++1z")
+
+
 add_executable(JSON main.cpp json.cpp)
