--- a/Project/Old Santa Paravia/Makefile
+++ b/Project/Old Santa Paravia/Makefile
@@ -48,10 +48,10 @@ RM = /usr/bin/cmake -E remove -f
 EQUALS = =
 
 # The top-level source directory on which CMake was run.
-CMAKE_SOURCE_DIR = "/mnt/c/Users/Mike/Documents/Object Oriented Programming/oop-practice/santa-paravia/santa-paravia"
+CMAKE_SOURCE_DIR = "/mnt/c/Users/Mike/Documents/Object Oriented Programming/oop-practice/Project/Old Santa Paravia"
 
 # The top-level build directory on which CMake was run.
-CMAKE_BINARY_DIR = "/mnt/c/Users/Mike/Documents/Object Oriented Programming/oop-practice/santa-paravia/santa-paravia"
+CMAKE_BINARY_DIR = "/mnt/c/Users/Mike/Documents/Object Oriented Programming/oop-practice/Project/Old Santa Paravia"
 
 #=============================================================================
 # Targets provided globally by CMake.
@@ -80,9 +80,9 @@ edit_cache/fast: edit_cache
 
 # The main all target
 all: cmake_check_build_system
-	$(CMAKE_COMMAND) -E cmake_progress_start "/mnt/c/Users/Mike/Documents/Object Oriented Programming/oop-practice/santa-paravia/santa-paravia/CMakeFiles" "/mnt/c/Users/Mike/Documents/Object Oriented Programming/oop-practice/santa-paravia/santa-paravia/CMakeFiles/progress.marks"
+	$(CMAKE_COMMAND) -E cmake_progress_start "/mnt/c/Users/Mike/Documents/Object Oriented Programming/oop-practice/Project/Old Santa Paravia/CMakeFiles" "/mnt/c/Users/Mike/Documents/Object Oriented Programming/oop-practice/Project/Old Santa Paravia/CMakeFiles/progress.marks"
 	$(MAKE) -f CMakeFiles/Makefile2 all
-	$(CMAKE_COMMAND) -E cmake_progress_start "/mnt/c/Users/Mike/Documents/Object Oriented Programming/oop-practice/santa-paravia/santa-paravia/CMakeFiles" 0
+	$(CMAKE_COMMAND) -E cmake_progress_start "/mnt/c/Users/Mike/Documents/Object Oriented Programming/oop-practice/Project/Old Santa Paravia/CMakeFiles" 0
 .PHONY : all
 
 # The main clean target
