Divided project into more files. Made city members private.

--- a/Project/New Santa Paravia/CMakeLists.txt
+++ b/Project/New Santa Paravia/CMakeLists.txt
@@ -2,4 +2,4 @@ project (santa-paravia)
 
 set(CMAKE_CXX_FLAGS "-std=c++1z")
 
-add_executable(santa-paravia main.cpp)
+add_executable(santa-paravia main.cpp game.cpp player.cpp city.cpp)
