--- a/.gitignore
+++ b/.gitignore
@@ -178,3 +178,6 @@ JSON/CMakeFiles/string.dir/link.txt
 JSON/CMakeFiles/TargetDirectories.txt
 JSON/Makefile
 JSON/JSON
+Project/New Santa Paravia/Makefile
+Project/New Santa Paravia/Makefile
+Project/New Santa Paravia/Makefile
